# ChangeLog for sci-astronomy/snfit-data
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*snfit-data-20100825 (27 Aug 2010)

  27 Aug 2010; Sébastien Fabbro <bicatali@gentoo.org>
  +snfit-data-20100825.ebuild, +metadata.xml:
  Initial import
