@@ -1,7 +1,15 @@
+DIST SNLS3-4Shooter2.tar.gz 1538 RMD160 a7a2655afc3ee2940cb3ee972b024c3486c6d5b2 SHA1 6929813baaf5368979325d79ca1ea8068f410a1d SHA256 2a7cd73c5fd01306d97a2cc9be821347443fbe3d8a0e71c5dc4f299736968316
+DIST SNLS3-CSP-Swope.tar.gz 34569 RMD160 0ae8aed9ebf36256abfeaca3b2058f1093e2bd2f SHA1 3ec88a86d77693d8f99c95b76a0a6208208ccfcd SHA256 abd106626bc5a64f6e6c4ebc75ea1c4e37e177db6d9471f26d5ad0ef27f79767
+DIST SNLS3-HST-ACSWF.tar.gz 14560 RMD160 6185bcc910214552cfe222089107ece0db328469 SHA1 1d3c49efe65964c69d932314c0e137fa746b7b71 SHA256 384eb9de87ec95c663816f713e55238281f7e42139c8474b1847af1897f65692
+DIST SNLS3-HST-NICMOS2.tar.gz 11640 RMD160 11068fefd8ca8171769e7fc28d5954e5789a8b51 SHA1 52bce4a15bf3a6e2c6fe93c9077cc85865cf58db SHA256 76c92285546745301a405a29946a2daa7784e18eb8ef30ab9fccdadac4be2da8
+DIST SNLS3-Keplercam.tar.gz 1560 RMD160 ce01eb5306e50ed2b6f4054ce6024185ee1f4ed8 SHA1 de1e79204c05457c86ea07918cb3a1c2bdde9d21 SHA256 7c73c528a16f2699652d866d5eeacbed5d7c3c8ca8843657c08e3c5d9fbe7c00
 DIST SNLS3-Landolt-model.tar.gz 4084 RMD160 6ea4dd5713268579f3a24f3cbe97f2eef53c12bf SHA1 d2421fb470f678ee94619622433fb975339fe7ac SHA256 ce1c523e21f996d746e30d4d8c4460e0231a1d5645acf3f0dc906bd7098555fb
 DIST SNLS3-Megacam-model.tar.gz 281799 RMD160 d1bd3ac6cb698b96d8cae9ce4facf1a83d01c761 SHA1 8b112a69881bb6a9967576b5e18c8d62b93f009b SHA256 1c95adebda76d6cdef5dfbdcd09a22c93a1573a8d844247adb6918d00be87996
-DIST SNLS3-magsys.tar.gz 24450 RMD160 1249db8a342b3f7a2f7476a0705dc18ee73a5ebc SHA1 bbede0dabcde7a353e16706ca789247ec05c833b SHA256 135a33326a14ae5cc81d6f700ef61184f9692a7358fd08bd510b1e6eae0de9a6
+DIST SNLS3-SDSS-magsys.tar.gz 205858 RMD160 490e049c670b57d1fb9661e883b202b1a4894b32 SHA1 d1e4a4c5fe7f56c2502ba42f0b3e28f5168928be SHA256 317ffa1a6802f33f29c184c9ddf4144ddf029609779d7700d1b112db822f6559
+DIST SNLS3-SDSS-model-Doi2010.tar.gz 10786 RMD160 f0874f106c8d3924d153290fae81e247ae062085 SHA1 8858167928151bc07e790c30abf609614ad817d2 SHA256 470896c7f4aa5254bac667dd88163332a41d8141d27f12994944415b11f7dc5e
+DIST SNLS3-Vega-magsys.tar.gz 69536 RMD160 551db7b1f1b71c5dcb346a2e68cf195789c6341f SHA1 add0b1df6353a34912311c1a1973b03147862539 SHA256 68f8fc26ffeecb6884ec7d342fbf8dea665917200dad72d5df38de0af7dc1ebd
+DIST SNLS3-magsys-1.tar.gz 25301 RMD160 24613588418bd8a5cac891bc6b58f11b942bfe79 SHA1 4f3f05d1d08c6840f13b0ec6101826159a450eff SHA256 67555b678e84829874a1eef578bb0219458e9aedc814d4e45a9c63002f597ed9
 DIST salt2_model_data-2-0.tar.gz 2418809 RMD160 1e5d6d35f4c498d7de286e8a7128f7b652f7213c SHA1 271e67d764c98b423dfaa264b9baf759a46acff1 SHA256 4fc8422cd5d750316eff9d64220baae408bdf557a11738fc9cbde2702d65c050
-EBUILD snfit-data-20100825.ebuild 767 RMD160 09ff4902616abcb1ce0ec23832986e292e583396 SHA1 3acf27f230657b307b231f1b5276df832154871e SHA256 6def2c4424b2f481b248c26080f36730021492bb237b4da1a4f480ce2e16312c
-MISC ChangeLog 280 RMD160 019908ac7fa722d4b5dd775ec407dc9cca0fcdf9 SHA1 77967949e5af38dfc17c601b2a77fc0277ba8793 SHA256 3c031f8ecb1d608884a36c28219eea44af122b5737db596f6101c2b4f9ef8af8
-MISC metadata.xml 339 RMD160 cf70b1ca8d6384fadc14bc3b484ec8cd492c7fc6 SHA1 f6aa7ee2ed2c66562de37e445f7e7e0f7b3bef9a SHA256 747bc6aa7336488a10995ef443ba17ac32d93da6ab4014e971726b26019acb4b
+EBUILD snfit-data-20110205.ebuild 1286 RMD160 79d3408b6c6d385c44a73419606e62b7afdcb7d3 SHA1 a032cf5351d6377f1585334611db1e3119f93e34 SHA256 947d1f5d36eec90953bc0b7ebfb0f4ce82f5aa421b4e93adfe7ae4b359a447ae
+MISC ChangeLog 467 RMD160 32f22d216fb7a8e01da29469d4ed4c0795897479 SHA1 59b4060757061333a1fd75f9f571645332ba7f0e SHA256 0c014c89f17ad09a74aee39758d8a97c956af90f47e51761692ae34be0418543
+MISC metadata.xml 341 RMD160 14e5423b1128b5e0b9861796c438aca01f71d5be SHA1 23781dbc900987454dedcb4c8ac5c4776c7ee33d SHA256 c1c152cf18788c9f238341cbd4ae38e45676136023d62603f21d091f11b54e42
