@@ -1,6 +1,12 @@
 # ChangeLog for sci-astronomy/snfit-data
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*snfit-data-20110205 (08 Feb 2011)
+
+  08 Feb 2011; Sébastien Fabbro <bicatali@gentoo.org>
+  +snfit-data-20110205.ebuild, metadata.xml:
+  Version bump to coincide with published version
 
 *snfit-data-20100825 (27 Aug 2010)
 
